syntax = "proto3";
option go_package = "./cryptobridge";

package CryptoBridge;

service MarketDataService {
    rpc GetOrderBookSnapshot(GetOrderBookSnapshotRequest) returns (GetOrderBookSnapshotResponse) {}
}

message GetOrderBookSnapshotRequest {
    string provider = 1;
    string market = 2;
    int32 maxDepth = 3;
}

message GetOrderBookSnapshotResponse {
    OrderBookSource source = 1;
    int64 lastUpdTs = 2;
    repeated OrderBookLevel bids = 3;
    repeated OrderBookLevel asks = 4;
}

message OrderBookLevel {
    string price = 1;
    string qty = 2;
}

enum OrderBookSource {
    Unknown = 0;
    Provider = 1;
    LocalOrderBook = 2;
}
